Wrote first testcase included driver for postgres support
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@20 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/.classpath
+++ b/OpenWMS-common/trunk/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 4.2 Runtime"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="lib/postgresql-8.2-504.jdbc3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
