Added commons-lang, added values classes Barcode and Weight
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@37 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/.classpath
+++ b/OpenWMS-common/trunk/.classpath
@@ -37,5 +37,6 @@
 	<classpathentry kind="lib" path="lib/lucene-analyzers-2.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
