--- a/OpenWMS-common/trunk/build-dist.properties
+++ b/OpenWMS-common/trunk/build-dist.properties
@@ -1,3 +1,9 @@
+# 
+# OpenWMS, the open Warehouse Management System
+# 
+# Distributable under LGPL license.
+# See terms of license at gnu.org.
+#
 project.dir = .
 war.file 			= openwms.war
 web.xml.file 		= web.xml
