--- a/OpenWMS-common/trunk/build.xml
+++ b/OpenWMS-common/trunk/build.xml
@@ -1,4 +1,10 @@
 <?xml version = "1.0" encoding="ISO-8859-1" ?>
+<!-- 
+ * OpenWMS, the open Warehouse Management System
+ * 
+ * Distributable under LGPL license.
+ * See terms of license at gnu.org.
+-->
 <project name = "OpenWMS-common" default = "Main-Build" basedir=".">
 	<property file="build-dist.properties"/>
 	
