--- a/OpenWMS-common/trunk/.settings/org.eclipse.jpt.core.prefs
+++ b/OpenWMS-common/trunk/.settings/org.eclipse.jpt.core.prefs
@@ -1,4 +1,4 @@
-#Wed Apr 30 12:12:01 CEST 2008
+#Wed Jan 14 22:12:40 CET 2009
 eclipse.preferences.version=1
 org.eclipse.jpt.core.discoverAnnotatedClasses=true
 org.eclipse.jpt.core.platform=generic
