git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@88 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/branches/Spring/.project
+++ b/OpenWMS-common/branches/Spring/.project
@@ -3,6 +3,7 @@
 	<name>OpenWMS-common-Spring</name>
 	<comment></comment>
 	<projects>
+		<project>OpenWMS-common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
