--- a/OpenWMS-common/branches/Spring/test/jdbc.properties
+++ b/OpenWMS-common/branches/Spring/test/jdbc.properties
@@ -1,5 +1,6 @@
 jdbc.driverClassName=org.hsqldb.jdbcDriver
-# jdbc.url=jdbc:hsqldb:mem:openwms
-jdbc.url=jdbc:hsqldb:data/openwms
+jdbc.url=jdbc:hsqldb:mem:openwms
+#jdbc.url=jdbc:hsqldb:data/openwms
 jdbc.username=sa
 jdbc.password=
+jdbc.persistenceUnit=OpenWMS-test
