git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@95 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/branches/Spring/.classpath
+++ b/OpenWMS-common/branches/Spring/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="META-INF/|META-INF/" kind="src" path="src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="spring"/>
 	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.2-504.jdbc3.jar">
