--- a/OpenWMS-common/branches/Spring/test/jdbc.test.properties
+++ b/OpenWMS-common/branches/Spring/test/jdbc.test.properties
@@ -8,7 +8,7 @@ jdbc.test.driverClassName=org.hsqldb.jdbcDriver
 jdbc.test.url=jdbc:hsqldb:hsql://localhost/openwmsdb
 jdbc.test.username=OPENWMS
 jdbc.test.password=OPENWMS
-jdbc.test.persistenceUnit=OpenWMS
+jdbc.test.persistenceUnit=OpenWMS-test
 
 #jdbc.test.driverClassName=org.postgresql.Driver
 #jdbc.test.url=jdbc:postgresql:OPENWMSDB
