--- a/OpenWMS-common/branches/Spring/.settings/org.eclipse.jst.common.project.facet.core.prefs
+++ b/OpenWMS-common/branches/Spring/.settings/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,3 +1,4 @@
-#Fri Aug 15 14:12:51 CEST 2008
-classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:java-1.5.0-sun-1.5.0.15/owners=jst.java\:5.0
+#Wed Mar 18 14:04:04 CET 2009
+classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:java-6-sun-1.6.0.10/owners=jst.java\:5.0
+classpath.helper/org.eclipse.jst.server.core.container\:\:org.eclipse.jst.server.generic.runtimeTarget\:\:JBoss\ v5.0/owners=jst.utility\:1.0
 eclipse.preferences.version=1
