--- a/OpenWMS-common/branches/Spring/.classpath
+++ b/OpenWMS-common/branches/Spring/.classpath
@@ -8,172 +8,172 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/postgresql-8.2-504.jdbc3.jar">
+	<classpathentry exported="true" kind="lib" path="lib/postgresql-8.2-504.jdbc3.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/easymock.jar">
+	<classpathentry exported="true" kind="lib" path="lib/easymock.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/easymockclassextension.jar">
+	<classpathentry exported="true" kind="lib" path="lib/easymockclassextension.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/unitils-1.1-rc-2.jar">
+	<classpathentry exported="true" kind="lib" path="lib/unitils-1.1-rc-2.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar">
+	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.14.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/antlr-2.7.6.jar">
+	<classpathentry exported="true" kind="lib" path="lib/antlr-2.7.6.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/asm.jar">
+	<classpathentry exported="true" kind="lib" path="lib/asm.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/asm-attrs.jar">
+	<classpathentry exported="true" kind="lib" path="lib/asm-attrs.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/c3p0-0.9.1.jar">
+	<classpathentry exported="true" kind="lib" path="lib/c3p0-0.9.1.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/cglib-2.1.3.jar">
+	<classpathentry exported="true" kind="lib" path="lib/cglib-2.1.3.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/commons-collections-2.1.1.jar">
+	<classpathentry exported="true" kind="lib" path="lib/commons-collections-2.1.1.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar">
+	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.0.4.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/db2java.jar">
+	<classpathentry exported="true" kind="lib" path="lib/db2java.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar">
+	<classpathentry exported="true" kind="lib" path="lib/dom4j-1.6.1.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/ehcache-1.2.3.jar">
+	<classpathentry exported="true" kind="lib" path="lib/ehcache-1.2.3.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/ejb3-persistence.jar">
+	<classpathentry exported="true" kind="lib" path="lib/ejb3-persistence.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/freemarker.jar">
+	<classpathentry exported="true" kind="lib" path="lib/freemarker.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/hibernate3.jar">
+	<classpathentry exported="true" kind="lib" path="lib/hibernate3.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/hibernate-annotations.jar">
+	<classpathentry exported="true" kind="lib" path="lib/hibernate-annotations.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/hibernate-commons-annotations.jar">
+	<classpathentry exported="true" kind="lib" path="lib/hibernate-commons-annotations.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/hibernate-entitymanager.jar">
+	<classpathentry exported="true" kind="lib" path="lib/hibernate-entitymanager.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/hibernate-search.jar">
+	<classpathentry exported="true" kind="lib" path="lib/hibernate-search.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/hibernate-tools.jar">
+	<classpathentry exported="true" kind="lib" path="lib/hibernate-tools.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/hibernate-validator.jar">
+	<classpathentry exported="true" kind="lib" path="lib/hibernate-validator.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/javassist.jar">
+	<classpathentry exported="true" kind="lib" path="lib/javassist.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jboss-archive-browsing.jar">
+	<classpathentry exported="true" kind="lib" path="lib/jboss-archive-browsing.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jta.jar">
+	<classpathentry exported="true" kind="lib" path="lib/jta.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jtidy-r8-20060801.jar">
+	<classpathentry exported="true" kind="lib" path="lib/jtidy-r8-20060801.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/lucene-analyzers-2.1.0.jar">
+	<classpathentry exported="true" kind="lib" path="lib/lucene-analyzers-2.1.0.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/lucene-core-2.1.0.jar">
+	<classpathentry exported="true" kind="lib" path="lib/lucene-core-2.1.0.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/junit-4.4.jar">
+	<classpathentry exported="true" kind="lib" path="lib/junit-4.4.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar">
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.4.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/dbunit-2.2.jar">
+	<classpathentry exported="true" kind="lib" path="lib/dbunit-2.2.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/hsqldb.jar" sourcepath="/OpenWMS-Libraries/sources/hsqldb_1_8_0_10.zip">
+	<classpathentry exported="true" kind="lib" path="lib/hsqldb.jar" sourcepath="/OpenWMS-Libraries/sources/hsqldb_1_8_0_10.zip">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
