--- a/OpenWMS-common/trunk/build.properties
+++ b/OpenWMS-common/trunk/build.properties
@@ -5,19 +5,15 @@
 # See terms of license at gnu.org.
 #
 project.dir = .
-war.file 			= openwms.war
-web.xml.file 		= web.xml
-application.file	= application.xml
-
-dir = ${project.dir}
-src.dir = ${dir}/src
-testsrc.dir = ${dir}/test
+deps.dir = ${project.dir}/deps
+src.dir = ${project.dir}/src
+testsrc.dir = ${project.dir}/test
 spring.dir = ${workspace.dir}/spring
-lib.dir = ${dir}/lib
-log.dir = ${dir}/log
-res.dir = ${dir}/res
-src.build.dir = ${dir}/build/ant/src
-testsrc.build.dir = ${dir}/build/ant/test
-dist.dir = ${dir}/dist
+lib.dir = ${project.dir}/lib
+log.dir = ${project.dir}/build/ant/log
+res.dir = ${project.dir}/res
+src.build.dir = ${project.dir}/build/ant/src
+testsrc.build.dir = ${project.dir}/build/ant/test
+dist.dir = ${project.dir}/dist
 meta-inf.dir = ${src.dir}/META-INF
 
