Corrected build file, added cobertura
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@161 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/build.properties
+++ b/OpenWMS-common/trunk/build.properties
@@ -4,16 +4,40 @@
 # Distributable under LGPL license.
 # See terms of license at gnu.org.
 #
-project.dir = .
-deps.dir = ${project.dir}/deps
-src.dir = ${project.dir}/src
-testsrc.dir = ${project.dir}/test
-spring.dir = ${workspace.dir}/spring
-lib.dir = ${project.dir}/lib
-log.dir = ${project.dir}/build/ant/log
-res.dir = ${project.dir}/res
-src.build.dir = ${project.dir}/build/ant/src
-testsrc.build.dir = ${project.dir}/build/ant/test
-dist.dir = ${project.dir}/dist
-meta-inf.dir = ${src.dir}/META-INF
+project.dir=.
+
+ant.dir=${build.dir}/ant
+ant.log.dir=${ant.dir}/log
+
+build.dir=${project.dir}/build
+build.main.dir=${ant.dir}/main
+build.test.dir=${ant.dir}/test
+
+cobertura.instrumented.dir=${build.dir}/cobertura
+cobertura.reports.dir=${reports.dir}/cobertura
+cobertura.reports.coveragereport.dir=${reports.dir}/testcoverage
+
+deps.dir=${project.dir}/deps
+deps.test.dir=${deps.dir}/test
+
+dist.dir=${project.dir}/dist
+dist.
+
+docs.dir=${project.dir}/docs
+
+junit.reports.dir=${reports.dir}/unittest
+junit.reports.html.dir=${junit.reports.dir}/html
+junit.reports.xml.dir=${junit.reports.dir}/xml
+
+reports.dir=${docs.dir}/reports
+
+src.dir=${project.dir}/src
+src.meta-inf.dir=${src.dir}/META-INF
+
+testsrc.dir=${project.dir}/test
+
+spring.dir=${workspace.dir}/spring
+
+lib.dir=${project.dir}/lib
+
 
