--- a/OpenWMS-common/trunk/build.xml
+++ b/OpenWMS-common/trunk/build.xml
@@ -5,7 +5,7 @@
  * Distributable under LGPL license.
  * See terms of license at gnu.org.
 -->
-<project xmlns:ivy="antlib:org.apache.ivy.ant" name="OpenWMS-common" default="Main-Build" basedir=".">
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="OpenWMS-common" default="nightly" basedir=".">
     <property file="build.properties" />
 
     <path id="class.path">
@@ -15,33 +15,28 @@
         <fileset dir="${deps.dir}/test">
             <include name="*.jar" />
         </fileset>
-        <fileset dir="${lib.dir}">
-            <include name="*.jar" />
-        </fileset>
-        <fileset dir="${lib.dir}/ivy">
-            <include name="*.jar" />
-        </fileset>
     </path>
-    
-    <path id="compile.test">
-        <fileset dir="${deps.dir}/build">
-            <include name="*.jar" />
+	<path id="cobertura.classpath">
+		<fileset dir="${deps.test.dir}">
+			<include name="**/*.jar" />
         </fileset>
-        <fileset dir="${deps.dir}/test">
-            <include name="*.jar" />
-        </fileset>
-    </path>
-
+	</path>
+	
+    <taskdef classpathref="cobertura.classpath" resource="tasks.properties"/>
+      
     
     <target name="deps">
         <echo message="************************************************" />
         <echo message="Resolve dependencies..." />
         <echo message="************************************************" />
-        <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="class.path" />
+        <path id="ivy.path">
+			<fileset dir="${lib.dir}/ivy" includes="**/*.jar" />
+		</path>
+        <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.path" />
         <ivy:retrieve pattern="${deps.dir}/[conf]/[artifact]-[revision].[ext]"/>
     </target>
 
-    <target name="initialize" depends="deps">
+    <target name="initialize">
         <tstamp>
             <format property="TODAY" pattern="d-MM-yy" />
         </tstamp>
@@ -49,22 +44,48 @@
         <echo message="Remove and create directories..." />
         <echo message="************************************************" />
         <mkdir dir="${dist.dir}" />
-        <mkdir dir="${src.build.dir}" />
-        <mkdir dir="${testsrc.build.dir}" />
+        <mkdir dir="${junit.reports.dir}"/>
+        <mkdir dir="${build.main.dir}" />
+        <mkdir dir="${build.main.dir}/META-INF" />
+        <mkdir dir="${build.test.dir}" />
+        <mkdir dir="${build.test.dir}/META-INF" />
     </target>
 
-    <target name="compile">
+    <target name="compile" depends="initialize">
         <echo message="************************************************" />
-        <echo message="Compile sources in ${src.dir} and ${testsrc.dir}..." />
+        <echo message="Compile sources in ${src.dir}..." />
         <echo message="************************************************" />
-        <javac destdir="${src.build.dir}" classpathref="class.path" debug="on" deprecation="on" optimize="off">
+        <javac destdir="${build.main.dir}" classpathref="class.path" debug="on" deprecation="on">
             <src path="${src.dir}" />
         </javac>
-        <javac srcdir="${src.dir};${testsrc.dir}" destdir="${testsrc.build.dir}" classpathref="compile.test" debug="on" deprecation="on" optimize="off">
-        </javac>
+        <copy tofile="${build.main.dir}/META-INF/persistence.xml" file="${src.meta-inf.dir}/persistence.xml"/>
+        <copy tofile="${build.main.dir}/META-INF/MANIFEST.MF" file="${src.meta-inf.dir}/MANIFEST.MF"/>
+        <copy tofile="${build.main.dir}/log4j.xml" file="${src.dir}/log4j.xml"/>
     </target>
 
-    <target name="junit">
+    <target name="compile-tests" depends="compile">
+        <echo message="************************************************" />
+        <echo message="Compile sources in ${testsrc.dir}..." />
+        <echo message="************************************************" />
+        <javac destdir="${build.test.dir}" debug="on" deprecation="on" >
+            <src path="${testsrc.dir}" />
+            <classpath>
+                <pathelement location="${build.main.dir}"/>
+                <fileset dir="${deps.dir}/build">
+                    <include name="*.jar" />
+                </fileset>
+                <fileset dir="${deps.dir}/test">
+                    <include name="*.jar" />
+                </fileset>
+            </classpath>
+        </javac>
+        <copy tofile="${build.test.dir}/META-INF/persistence.xml" file="${testsrc.dir}/META-INF/persistence.xml"/>
+        <copy tofile="${build.test.dir}/META-INF/MANIFEST.MF" file="${testsrc.dir}/META-INF/MANIFEST.MF"/>
+        <copy tofile="${build.test.dir}/log4j.xml" file="${testsrc.dir}/log4j.xml"/>
+    </target>
+
+    <!-- ********************************* TESTS & REPORTS ********************************* -->
+	<target name="junit" depends="compile">
         <echo message="************************************************" />
         <echo message="Running unit tests..." />
         <echo message="************************************************" />
@@ -75,18 +96,60 @@
 
             <classpath>
                 <path refid="class.path" />
+                <pathelement location="${build.main.dir}"/>
+                <pathelement location="${build.test.dir}"/>
             </classpath>
 
-            <batchtest fork="yes" todir="${log.dir}">
-                <fileset dir="${testsrc.build.dir}">
+            <batchtest fork="yes" todir="${java.io.tmpdir}">
+                <fileset dir="${build.test.dir}">
                     <include name="**/*Test.class" />
-                    <include name="**/*TestCase.class" />
                 </fileset>
             </batchtest>
         </junit>
+	    <mkdir dir="${junit.reports.html.dir}"/>
+	    <mkdir dir="${junit.reports.xml.dir}"/>
+	    <junitreport todir="${junit.reports.xml.dir}">
+			<fileset dir="${java.io.tmpdir}">
+				<include name="TEST-*.xml"/>
+			</fileset>
+			<report format="frames" todir="${junit.reports.html.dir}"/>
+	    </junitreport>
         <fail if="failed" message="One or more unit test have failed!" />
     </target>
+    
+	<target name="instrument" depends="compile, compile-tests">
+		<cobertura-instrument todir="${cobertura.instrumented.dir}">
+			<fileset dir="${build.main.dir}">
+				<include name="**/*.class"/>
+			</fileset>
+		</cobertura-instrument>
+	</target>
+    
+	<target name="cover-test" depends="instrument">
+		<junit dir="." failureproperty="test.failure" printsummary="yes" fork="true" haltonerror="false">
+            <sysproperty key="exec.longrunning.tests" value="true" />
 
+            <classpath>
+                <path location="${cobertura.instrumented.dir}" />
+                <path refid="class.path" />
+                <path refid="cobertura.classpath"/>
+            </classpath>
+
+		    <batchtest fork="yes" todir="${java.io.tmpdir}">
+                <fileset dir="${build.test.dir}">
+                    <include name="**/*Test.class" />
+                </fileset>
+            </batchtest>
+		</junit>
+	</target>
+      
+	<!-- run this target to generate the coverage reports -->
+	<target name="coverage-report" depends="cover-test">
+        <delete dir="${cobertura.reports.coveragereport.dir}" failonerror="no"/>
+        <mkdir dir="${cobertura.reports.coveragereport.dir}"/>
+		<cobertura-report srcdir="${src.dir}" destdir="${cobertura.reports.coveragereport.dir}"/>
+        <delete dir="${cobertura.instrumented.dir}" failonerror="no"/>
+	</target>
 
     <target name="jar">
         <echo message="************************************************" />
@@ -102,9 +165,25 @@
         </jar>
     </target>
 
-    <target name="Main-Build" depends="initialize, compile, junit, jar">
+    <target name="clean">
         <echo message="************************************************" />
-        <echo message="Building Main Target" />
+        <echo message="Clean" />
+        <echo message="************************************************" />
+        <delete dir="${cobertura.reports.coveragereport.dir}" failonerror="no"/>
+        <delete dir="${build.main.dir}" />
+        <delete dir="${build.test.dir}" />
+        <delete dir="${cobertura.instrumented.dir}" failonerror="no" />
+        <delete dir="${junit.reports.dir}" failonerror="no"/>
+    </target>
+
+    <target name="build" depends="clean, initialize, compile, jar">
+        <echo message="************************************************" />
+        <echo message="Building..." />
+        <echo message="************************************************" />
+    </target>
+    <target name="nightly" depends="clean, initialize, junit, compile-tests, coverage-report, jar">
+        <echo message="************************************************" />
+        <echo message="Building nightly build" />
         <echo message="************************************************" />
     </target>
 </project>
