Corrected build file, added cobertura
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@165 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/ivy.xml
+++ b/OpenWMS-common/trunk/ivy.xml
@@ -24,6 +24,7 @@
 		<!-- Cobertura -->
 		<dependency org="cobertura" name="cobertura" rev="1.8" conf="test->*" />
 		<dependency org="asm" name="asm" rev="2.2.1" conf="test->*" />
+		<dependency org="log4j" name="log4j" rev="1.2.9" conf="test->*" />
 		<dependency org="oro" name="oro" rev="2.0.8" conf="test->*" />
 
 		<dependency org="hsqldb" name="hsqldb" rev="1.8.0.7" conf="test->*" />
