Moved flex build
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@171 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/build.properties
+++ b/OpenWMS-common/trunk/build.properties
@@ -6,6 +6,9 @@
 #
 project.dir=.
 
+FLEX_HOME=${env.FLEX_HOME}
+FLEX_TASKS_JAR=${env.FLEX_HOME}/ant/lib/flexTasks.jar
+
 ant.dir=${build.dir}/ant
 ant.log.dir=${ant.dir}/log
 
@@ -24,6 +27,9 @@ dist.dir=${project.dir}/dist
 dist.
 
 docs.dir=${project.dir}/docs
+
+flex.build.dir=${build.dir}/flex/build
+flex.src.dir=client/flex/as3
 
 junit.reports.dir=${reports.dir}/unittest
 junit.reports.html.dir=${junit.reports.dir}/html
