Moved ivy config
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@174 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/build.properties
+++ b/OpenWMS-common/trunk/build.properties
@@ -24,12 +24,16 @@ deps.dir=${project.dir}/deps
 deps.test.dir=${deps.dir}/test
 
 dist.dir=${project.dir}/dist
-dist.
 
 docs.dir=${project.dir}/docs
 
+etc.dir=${project.dir}/etc
+
 flex.build.dir=${build.dir}/flex/build
 flex.src.dir=client/flex/as3
+
+ivy.dep.file=${etc.dir}/ivy.xml
+ivy.settings.file=${etc.dir}/ivysettings.xml
 
 junit.reports.dir=${reports.dir}/unittest
 junit.reports.html.dir=${junit.reports.dir}/html
