--- a/OpenWMS-common/trunk/build.properties
+++ b/OpenWMS-common/trunk/build.properties
@@ -22,6 +22,7 @@ cobertura.reports.coveragereport.dir=${reports.dir}/testcoverage
 
 deps.dir=${project.dir}/deps
 deps.test.dir=${deps.dir}/test
+deps.build.dir=${deps.dir}/build
 
 dist.dir=${project.dir}/dist
 
