--- a/OpenWMS-common/trunk/build.properties
+++ b/OpenWMS-common/trunk/build.properties
@@ -36,6 +36,8 @@ flex.src.dir=client/flex/as3
 ivy.dep.file=${etc.dir}/ivy.xml
 ivy.settings.file=${etc.dir}/ivysettings.xml
 
+jar.file=${ant.project.name}.jar
+
 junit.reports.dir=${reports.dir}/unittest
 junit.reports.html.dir=${junit.reports.dir}/html
 junit.reports.xml.dir=${junit.reports.dir}/xml
